--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,32 +22,32 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: Configure AWS credentials for IAD account access
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          role-to-assume: ${{ secrets.E2E_IAD_TEST_ACCOUNT_ARN }}
-          aws-region: us-east-1
-
-      - name: Retrieve account id for the region
-        uses: aws-actions/aws-secretsmanager-get-secrets@v1
-        with:
-          secret-ids:
-            ACCOUNT_ID, region-account/${{ matrix.aws-region }}
-
-      - name: Configure AWS credentials for the regional account access
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          role-to-assume: arn:aws:iam::${{ env.ACCOUNT_ID }}:role/${{ secrets.RESOURCE_CLEANER_ROLE_NAME }}
-          aws-region: ${{ matrix.aws-region }}
-
-      - name: Cleanup EC2 instances and ASGs
-        working-directory: .github/workflows/util/clean/ec2_instance_cleanup
-        env:
-          AWS_DEFAULT_REGION: ${{ matrix.aws-region }}
-          S3_REPORTS_BUCKET: ${{ secrets.S3_CLEAUP_REPORTS_BUCKET }}-prod-${{ matrix.aws-region }}
-        run: |
-          python -m pip install -r requirements.txt
-          python cleaner.py
+#      - name: Configure AWS credentials for IAD account access
+#        uses: aws-actions/configure-aws-credentials@v4
+#        with:
+#          role-to-assume: ${{ secrets.E2E_IAD_TEST_ACCOUNT_ARN }}
+#          aws-region: us-east-1
+#
+#      - name: Retrieve account id for the region
+#        uses: aws-actions/aws-secretsmanager-get-secrets@v1
+#        with:
+#          secret-ids:
+#            ACCOUNT_ID, region-account/${{ matrix.aws-region }}
+#
+#      - name: Configure AWS credentials for the regional account access
+#        uses: aws-actions/configure-aws-credentials@v4
+#        with:
+#          role-to-assume: arn:aws:iam::${{ env.ACCOUNT_ID }}:role/${{ secrets.RESOURCE_CLEANER_ROLE_NAME }}
+#          aws-region: ${{ matrix.aws-region }}
+#
+#      - name: Cleanup EC2 instances and ASGs
+#        working-directory: .github/workflows/util/clean/ec2_instance_cleanup
+#        env:
+#          AWS_DEFAULT_REGION: ${{ matrix.aws-region }}
+#          S3_REPORTS_BUCKET: ${{ secrets.S3_CLEAUP_REPORTS_BUCKET }}-prod-${{ matrix.aws-region }}
+#        run: |
+#          python -m pip install -r requirements.txt
+#          python cleaner.py
 
   cleanup-k8s-on-ec2:
     runs-on: ubuntu-latest
